k8s/backend/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    component: backend
  ports:
    - name: backend-srv
      port: 8000
      targetPort: 8000
      protocol: TCP
